--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,23 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.app{
+  font-size: xx-large;
+  font-weight:bold;
+  /* display: flex;
+  justify-content:space-between; */
+  margin: 50vh;
+}
+.mount_button,
+.unmount_button{
+
+  display:inline-flex;
+  justify-content: center;
+  height:20px;
+  width: max-content;
+  background-color: firebrick;
+  color: chartreuse;
+
 }
